# moo

./: .gitignore  README.md  app.py  pyproject.toml  test_migration.py  ui.py
core/: base.py  dto.py  errors.py  utils.py
docs/: class_diagram.mmd  current_status.md  migration_status.md
infra/: api_client.py  email_service.py  excel_exporter.py  snowflake_repo.py
services/: business_constraints_service.py  constraint_builder.py  review_submission_service.py  ui_data_service.py
tests/: test_core_dto.py  test_core_utils.py  test_infra_api_client.py  test_infra_email_service.py  test_infra_excel_exporter.py  test_integration_app_flow.py  test_services_business_constraints.py  test_services_constraint_builder.py  test_services_core.py  test_services_review_submission.py  test_ui_forms.py
ui/: channel_capacity_form.py  cycle_form.py  hcp_envelope_form.py  market_brand_form.py  page.py  ui_utils.py
utils/: output_mapping.py  utilization_automation.py  utils.py
