[project]
name = "oneai-com-turing-occp-business-constraint-application"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.10"
dependencies = [
    "kaleido==0.2.1",
    "matplotlib>=3.5.1",
    "metaflow>=2.12.12",
    "mlflow>=1.24.0",
    "openpyxl==3.1.5",
    "plotly>=5.7.0",
    "pytest==6.2.5",
    "pytest-cov==3.0.0",
    "python-pptx==0.6.21",
    "seaborn>=0.12.2",
    "snowflake-connector-python>=2.8.3",
    "streamlit==1.40.0",
    "timebudget>=0.7.1",
    "twine==3.8.0",
    "numpy>=1.21.0,<1.24.0",
    "pyarrow==7.0.0",
    "rich>=13.9.4",
    "pandas>=1.3.0,<1.5.0",
    "ruff>=0.1.0",
]

[tool.ruff]

exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

line-length = 88
indent-width = 4
target-version = "py39"

[tool.ruff.lint]

select = ["E4", "E7", "E9", "F"]
ignore = []

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

skip-magic-trailing-comma = false

line-ending = "auto"

docstring-code-format = false

docstring-code-line-length = "dynamic"

